--- a/1 ACME - Responsive Webpage/css/style.css
+++ b/1 ACME - Responsive Webpage/css/style.css
@@ -10,8 +10,10 @@ body {
 /* Global */
 .container {
     width: 80%;
-    margin: auto; /* Moves elements into the middle */
-    overflow: hidden; /* content that goes out of div wont have scrolling applied */
+    margin: auto;
+    /* Moves elements into the middle */
+    overflow: hidden;
+    /* content that goes out of div wont have scrolling applied */
 }
 
 ul {
@@ -22,7 +24,8 @@ ul {
 .button_1 {
     height: 38px;
     background-color: #e8491d;
-    border: 0; /* or none */
+    border: 0;
+    /* or none */
     padding: 0 20px;
     color: white;
 }
@@ -39,13 +42,14 @@ ul {
 header {
     background-color: #35424a;
     color: white;
-    padding-top:30px;
-    min-height: 70px; /* min height at smallest devices */
+    padding-top: 30px;
+    min-height: 70px;
+    /* min height at smallest devices */
     border-bottom: #e8491d solid 3px;
 }
 
 header a {
-    color:white;
+    color: white;
     text-decoration: none;
     text-transform: uppercase;
     font-size: 16px;
@@ -71,7 +75,8 @@ header nav {
 }
 
 /* Making "ACME" and "Home" highlighted orange */
-header .highlight, header .current a {
+header .highlight,
+header .current a {
     color: #e8491d;
     font-weight: bold;
 }
@@ -81,19 +86,22 @@ header a:hover {
     color: #cccccc;
     font-weight: bold;
 }
+
 /* End of Header */
 
 /* Showcase section */
 .showcase {
-    padding-bottom:60px;
+    padding-bottom: 60px;
     min-height: 400px;
-    background-image: url(../images/showcase.jpg); /* Going out of css folder requires using .. */
-    background-position-y: -400px; /* positions image up a bit */
+    background-image: url(../images/showcase.jpg);
+    /* Going out of css folder requires using .. */
+    background-position-y: -400px;
+    /* positions image up a bit */
 }
 
 .showcase .container {
     text-align: center;
-    color:white;
+    color: white;
     max-width: 800px;
 }
 
@@ -106,12 +114,13 @@ header a:hover {
 .showcase p {
     font-size: 20px;
 }
+
 /* End of Showcase */
 
 /* Newsletter section */
 .newsletter {
     padding: 15px;
-    background-color:#35424a;
+    background-color: #35424a;
     color: white;
 }
 
@@ -125,9 +134,9 @@ header a:hover {
 }
 
 .newsletter input[type="email"] {
-    padding:4px; 
+    padding: 4px;
     height: 25px;
-    width:250px;
+    width: 250px;
 }
 
 /* Button part of global styling */
@@ -136,6 +145,7 @@ header a:hover {
 .boxes {
     margin-top: 20px;
 }
+
 .boxes .box {
     width: 30%;
     /* Need to specify width in order to use float */
@@ -182,15 +192,20 @@ ul.services li {
     background-color: #e6e6e6;
 }
 
-aside.sidebar .quote input, aside.sidebar .quote textarea /* selectors here are tricky */ {
+aside.sidebar .quote input,
+aside.sidebar .quote textarea
+
+/* selectors here are tricky */
+    {
     width: 90%;
     padding: 5px;
 }
 
 /* Responsive sizing from mobile up*/
-@media(max-width: 768px){
-    header .branding, 
-    header nav, 
+@media(max-width: 768px) {
+
+    header .branding,
+    header nav,
     header nav li,
     .newsletter h1,
     .newsletter form,
@@ -207,14 +222,17 @@ aside.sidebar .quote input, aside.sidebar .quote textarea /* selectors here are 
     }
 
     .showcase h1 {
-        margin-top:40px;
+        margin-top: 40px;
     }
 
-    .newsletter form input[type="email"], .quote input, .quote textarea {
+    .newsletter form input[type="email"],
+    .quote input,
+    .quote textarea {
         /* display: block; */
         width: 100%;
         margin-bottom: 5px;
     }
+
     .newsletter button .quote button {
         display: block;
         width: 100%;
