--- a/3 Stile - Product Landing Page/main.css
+++ b/3 Stile - Product Landing Page/main.css
@@ -5,7 +5,7 @@
 }
 
 html {
-  font-family: "Roboto Lt", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 10px;
   color: #333;
 }
@@ -38,4 +38,62 @@ a {
 .menu-toggle i,
 .fa-times {
   font-size: 3.5rem;
+}
+
+.fa-times {
+  display: none;
+  cursor: pointer;
+}
+
+nav {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.075);
+  z-index: 1000;
+}
+
+.logo {
+  width: 5rem;
+  box-sizing: content-box;
+  padding-left: 3rem;
+}
+
+.logo img {
+  display: block;
+  width: 100%;
+}
+
+nav ul {
+  height: 8rem;
+  list-style: none;
+  display: flex;
+  font-size: 1.6rem;
+}
+
+nav ul li {
+  padding: 0 3rem;
+  line-height: 8rem;
+  transition: background-color 0.5s;
+}
+
+nav ul li:hover {
+  background-color: rgba(0, 0, 0, 0.075);
+}
+
+.nav-right ul li {
+  border-right: 1px solid rgba(0, 0, 0, 0.075);
+}
+
+.nav-right ul li:nth-child(1) {
+  border-left: 1px solid rgba(0, 0, 0, 0.075);
+}
+
+.nav-right ul li:last-child {
+  border-right: none;
+}
+
+.nav-right i {
+  /* left off at 20:00 */
 }
