--- a/3 Stile - Product Landing Page/main.css
+++ b/3 Stile - Product Landing Page/main.css
@@ -95,5 +95,69 @@ nav ul li:hover {
 }
 
 .nav-right i {
-  /* left off at 20:00 */
+  margin-right: 1rem;
+}
+
+.nav-right i:first-child {
+  margin-right: 0;
+}
+
+.main {
+  position: absolute;
+  display: flex;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.tone-1 {
+  background-color: #f7f7f6;
+  height: 100vh;
+  flex: 1;
+}
+
+.tone-2 {
+  background-color: #f9e2ba;
+  height: 100vh;
+  flex: 1;
+  position: relative;
+}
+
+.tone-2 img {
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  left: -15rem;
+  transform: translateY(-50%);
+}
+
+.product-info {
+  display: flex;
+  width: 90%;
+  height: 100%;
+  margin: 0 auto;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.product-info h1 {
+  font-size: 4rem;
+  font-family: -apple-system, Roboto, sans-serif;
+  letter-spacing: 3px;
+  margin-right: -3px;
+  font-weight: 400;
+  margin-bottom: 1rem;
+  text-align: center;
+}
+
+.product-info p {
+  font-size: 1.8rem;
+  margin-bottom: 4rem;
+}
+
+.product-info h2 {
+  font-size: 2.5rem;
+  margin-bottom: 5rem;
 }
