--- a/3 Stile - Product Landing Page/main.css
+++ b/3 Stile - Product Landing Page/main.css
@@ -161,3 +161,26 @@ nav ul li:hover {
   font-size: 2.5rem;
   margin-bottom: 5rem;
 }
+
+.btn {
+  display: flex;
+  padding: 2rem;
+  color: #f7f7f6;
+  font-size: 1.5rem;
+  font-weight: 900;
+  transition: all 0.5s;
+}
+
+.info-btns {
+  display: flex;
+}
+
+.discover-btn {
+  background-color: #a4a4a4;
+}
+
+.cart-btn {
+  background-color: #141110;
+}
+
+.discover-btn: hover;
